created nav structure, learned shortcut for typing div"

--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
     <title>lama comm</title>
   </head>
   <body>
-    Hello, world!
+    <nav>
+        <div class="nav-top"></div>
+        <div class="nav-bottom"></div>
+    </nav>
   </body>
 </html>
