set up input and logo

--- a/index.html
+++ b/index.html
@@ -14,8 +14,18 @@
   </head>
   <body>
     <nav>
-        <div class="nav-top"></div>
-        <div class="nav-bottom"></div>
+      <div class="nav-top">
+        <div class="nav-item">
+          <img src="./img/sneakers.png" alt="" />
+        </div>
+        <div class="nav-item">
+          <div class="search">
+            <input type="text" placeholder="Search..." class="search-input" />
+          </div>
+        </div>
+        <div class="nav-item"></div>
+      </div>
+      <div class="nav-bottom"></div>
     </nav>
   </body>
 </html>
