added search icon

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
         <div class="nav-item">
           <div class="search">
             <input type="text" placeholder="Search..." class="search-input" />
+            <img class="search-icon" src="./img/search.png"></img>
           </div>
         </div>
         <div class="nav-item"></div>
