added style to the nav

--- a/index.html
+++ b/index.html
@@ -24,7 +24,9 @@
             <img class="search-icon" src="./img/search.png"></img>
           </div>
         </div>
-        <div class="nav-item"></div>
+        <div class="nav-item">
+            <span class="limited-offer">Liimited Offer!</span>
+        </div>
       </div>
       <div class="nav-bottom"></div>
     </nav>
