added menu items to html@

--- a/index.html
+++ b/index.html
@@ -21,14 +21,20 @@
         <div class="nav-item">
           <div class="search">
             <input type="text" placeholder="Search..." class="search-input" />
-            <img class="search-icon" src="./img/search.png"></img>
+            <img class="search-icon" src="./img/search.png" />
           </div>
         </div>
         <div class="nav-item">
-            <span class="limited-offer">Liimited Offer!</span>
+          <span class="limited-offer">Limited Offer!</span>
         </div>
       </div>
-      <div class="nav-bottom"></div>
+      <div class="nav-bottom">
+        <h3 class="menu-item">AIR FORCE</h3>
+        <h3 class="menu-item">JORDAN</h3>
+        <h3 class="menu-item">BLAZER</h3>
+        <h3 class="menu-item">CRATER</h3>
+        <h3 class="menu-item">HIPPIE</h3>
+      </div>
     </nav>
   </body>
 </html>
