--- a/index.html
+++ b/index.html
@@ -36,5 +36,20 @@
         <h3 class="menu-item">HIPPIE</h3>
       </div>
     </nav>
+    <div class="slider">
+      <div class="slider-wrapper">
+        <div class="slider-item">
+          <img src="./img/air.png" alt="" class="slider-img" />
+          <div class="slide-bg"></div>
+          <h1 class="slider-title">
+            AIR FORCE<br />
+            NEW<br />
+            SEASON
+          </h1>
+          <h2 class="slider-price">£150</h2>
+          <button class="buy-button">BUY NOW!</button>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
