added other items to slider in html

--- a/index.html
+++ b/index.html
@@ -49,6 +49,50 @@
           <h2 class="slider-price">£150</h2>
           <button class="buy-button">BUY NOW!</button>
         </div>
+        <div class="slider-item">
+          <img src="./img/jordan.png" alt="" class="slider-img" />
+          <div class="slide-bg"></div>
+          <h1 class="slider-title">
+            JORDAN<br />
+            NEW<br />
+            SEASON
+          </h1>
+          <h2 class="slider-price">£140</h2>
+          <button class="buy-button">BUY NOW!</button>
+        </div>
+        <div class="slider-item">
+          <img src="./img/blazer.png" alt="" class="slider-img" />
+          <div class="slide-bg"></div>
+          <h1 class="slider-title">
+            BLAZER<br />
+            NEW<br />
+            SEASON
+          </h1>
+          <h2 class="slider-price">£170</h2>
+          <button class="buy-button">BUY NOW!</button>
+        </div>
+        <div class="slider-item">
+          <img src="./img/crater.png" alt="" class="slider-img" />
+          <div class="slide-bg"></div>
+          <h1 class="slider-title">
+            CRATER<br />
+            NEW<br />
+            SEASON
+          </h1>
+          <h2 class="slider-price">£115</h2>
+          <button class="buy-button">BUY NOW!</button>
+        </div>
+        <div class="slider-item">
+          <img src="./img/hippie.png" alt="" class="slider-img" />
+          <div class="slide-bg"></div>
+          <h1 class="slider-title">
+            HIPPIE<br />
+            NEW<br />
+            SEASON
+          </h1>
+          <h2 class="slider-price">£120</h2>
+          <button class="buy-button">BUY NOW!</button>
+        </div>
       </div>
     </div>
   </body>
