added bg circle and color. learned a bit more about absolute

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
       <div class="slider-wrapper">
         <div class="slider-item">
           <img src="./img/air.png" alt="" class="slider-img" />
-          <div class="slide-bg"></div>
+          <div class="slider-bg"></div>
           <h1 class="slider-title">
             AIR FORCE<br />
             NEW<br />
@@ -51,7 +51,7 @@
         </div>
         <div class="slider-item">
           <img src="./img/jordan.png" alt="" class="slider-img" />
-          <div class="slide-bg"></div>
+          <div class="slider-bg"></div>
           <h1 class="slider-title">
             JORDAN<br />
             NEW<br />
@@ -62,7 +62,7 @@
         </div>
         <div class="slider-item">
           <img src="./img/blazer.png" alt="" class="slider-img" />
-          <div class="slide-bg"></div>
+          <div class="slider-bg"></div>
           <h1 class="slider-title">
             BLAZER<br />
             NEW<br />
@@ -73,7 +73,7 @@
         </div>
         <div class="slider-item">
           <img src="./img/crater.png" alt="" class="slider-img" />
-          <div class="slide-bg"></div>
+          <div class="slider-bg"></div>
           <h1 class="slider-title">
             CRATER<br />
             NEW<br />
@@ -84,7 +84,7 @@
         </div>
         <div class="slider-item">
           <img src="./img/hippie.png" alt="" class="slider-img" />
-          <div class="slide-bg"></div>
+          <div class="slider-bg"></div>
           <h1 class="slider-title">
             HIPPIE<br />
             NEW<br />
