added features to html

--- a/index.html
+++ b/index.html
@@ -95,6 +95,42 @@
         </div>
       </div>
     </div>
+    <div class="features">
+      <div class="feature">
+        <img src="./img/shipping.png" alt="" class="feature-img" />
+        <span class="feature-title">FREE SHIPPING</span>
+        <span class="feature-description"
+          >Free worldwide shipping on all orders.</span
+        >
+      </div>
+    </div>
+    <div class="features">
+      <div class="feature">
+        <img src="./img/return.png" alt="" class="feature-img" />
+        <span class="feature-title">30 DAYS RETURN</span>
+        <span class="feature-description"
+          >No question return and easy refund in 14 days.</span
+        >
+      </div>
+    </div>
+    <div class="features">
+      <div class="feature">
+        <img src="./img/gift.png" alt="" class="feature-img" />
+        <span class="feature-title">GIFT CARDS</span>
+        <span class="feature-description"
+          >Purchase gift cards for special occasions.</span
+        >
+      </div>
+    </div>
+    <div class="features">
+      <div class="feature">
+        <img src="./img/contact.png" alt="" class="feature-img" />
+        <span class="feature-title">CONTACT US!</span>
+        <span class="feature-description"
+          >Talk to us using our support system.</span
+        >
+      </div>
+    </div>
     <script src="./app.js"></script>
   </body>
 </html>
