added prodcut container, description, sizes and colors

--- a/index.html
+++ b/index.html
@@ -128,6 +128,30 @@
         >
       </div>
     </div>
+    <div class="product">
+      <img src="./img/air.png" alt="" class="product-img" />
+      <div class="product-details">
+        <h1 class="product-title">AIR FORCE</h1>
+        <h2 class="product-price">£150</h2>
+        <p class="product-description">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum vero
+          illum unde iste, fugit sit reprehenderit nostrum doloremque earum
+          praesentium. Dicta illum ad possimus, amet eius vero in dolor autem.
+        </p>
+        <div class="colors">
+          <div class="color"></div>
+          <div class="color"></div>
+        </div>
+        <div class="sizes">
+          <div class="size">8</div>
+          <div class="size">9</div>
+          <div class="size">10</div>
+          <div class="size">11</div>
+          <div class="size">12</div>
+        </div>
+        <button class="product-button">BUY NOW!</button>
+      </div>
+    </div>
     <script src="./app.js"></script>
   </body>
 </html>
