--- a/index.html
+++ b/index.html
@@ -47,7 +47,9 @@
             SEASON
           </h1>
           <h2 class="slider-price">£150</h2>
-          <button class="buy-button">BUY NOW!</button>
+          <a href="#product">
+            <button class="buy-button">BUY NOW!</button>
+          </a>
         </div>
         <div class="slider-item">
           <img src="./img/jordan.png" alt="" class="slider-img" />
@@ -58,7 +60,9 @@
             SEASON
           </h1>
           <h2 class="slider-price">£140</h2>
-          <button class="buy-button">BUY NOW!</button>
+          <a href="#product">
+            <button class="buy-button">BUY NOW!</button>
+          </a>
         </div>
         <div class="slider-item">
           <img src="./img/blazer.png" alt="" class="slider-img" />
@@ -69,7 +73,9 @@
             SEASON
           </h1>
           <h2 class="slider-price">£170</h2>
-          <button class="buy-button">BUY NOW!</button>
+          <a href="#product">
+            <button class="buy-button">BUY NOW!</button>
+          </a>
         </div>
         <div class="slider-item">
           <img src="./img/crater.png" alt="" class="slider-img" />
@@ -80,7 +86,9 @@
             SEASON
           </h1>
           <h2 class="slider-price">£115</h2>
-          <button class="buy-button">BUY NOW!</button>
+          <a href="#product">
+            <button class="buy-button">BUY NOW!</button>
+          </a>
         </div>
         <div class="slider-item">
           <img src="./img/hippie.png" alt="" class="slider-img" />
@@ -91,7 +99,9 @@
             SEASON
           </h1>
           <h2 class="slider-price">£120</h2>
-          <button class="buy-button">BUY NOW!</button>
+          <a href="#product">
+            <button class="buy-button">BUY NOW!</button>
+          </a>
         </div>
       </div>
     </div>
@@ -128,7 +138,7 @@
         >
       </div>
     </div>
-    <div class="product">
+    <div class="product" id="product">
       <img src="./img/air.png" alt="" class="product-img" />
       <div class="product-details">
         <h1 class="product-title">AIR FORCE</h1>
