added payment section with inputs and labels"

--- a/index.html
+++ b/index.html
@@ -161,6 +161,15 @@
         </div>
         <button class="product-button">BUY NOW!</button>
       </div>
+      <div class="payment">
+        <h1 class="pay-title">Personal Info</h1>
+        <label>Name and Surname</label>
+        <input type="text" placeholder="JD" class="pay-input" />
+        <label>Phone Number</label>
+        <input type="text" placeholder="07833 666 555" class="pay-input" />
+        <label>Address</label>
+        <input type="text" placeholder="123 here street" class="pay-input" />
+      </div>
     </div>
     <script src="./app.js"></script>
   </body>
