--- a/index.html
+++ b/index.html
@@ -169,6 +169,18 @@
         <input type="text" placeholder="07833 666 555" class="pay-input" />
         <label>Address</label>
         <input type="text" placeholder="123 here street" class="pay-input" />
+        <h1 class="pay-title">Card Info</h1>
+        <div class="card-icons">
+          <img src="./img/visa.png" alt="" class="card-icon" />
+          <img src="./img/master.png" alt="" class="card-icon" />
+        </div>
+        <input type="password" class="pay-input" placeholder="Card Number" />
+        <div class="card-info">
+          <input type="text" class="pay-input small" placeholder="mm" />
+          <input type="text" class="pay-input small" placeholder="yyyy" />
+          <input type="text" class="pay-input small" placeholder="cvv" />
+          <button class="pay-button">Chechout!</button>
+        </div>
       </div>
     </div>
     <script src="./app.js"></script>
