--- a/index.html
+++ b/index.html
@@ -181,6 +181,7 @@
           <input type="text" class="pay-input small" placeholder="cvv" />
         </div>
         <button class="pay-button">Chechout!</button>
+        <span class="close">X</span>
       </div>
     </div>
     <script src="./app.js"></script>
