created gallery component in the dom, started styling

--- a/index.html
+++ b/index.html
@@ -184,6 +184,36 @@
         <span class="close">X</span>
       </div>
     </div>
+    <div class="gallery">
+      <div class="gallery-item">
+        <h1 class="gallery-title">Live Free</h1>
+        <img
+          src="https://source.unsplash.com/xmrL-yps7gI"
+          alt=""
+          class="gallery-img"
+        />
+      </div>
+   
+      <div class="gallery-item">
+        <h1 class="gallery-title">Define Your Own Style</h1>
+        <img
+          src="https://source.unsplash.com/2UTk-Nip5aM"
+          alt=""
+          class="gallery-img"
+        />
+      </div>
+  
+      <div class="gallery-item">
+        <h1 class="gallery-title">Make The World Change For You</h1>
+        <img
+          src="https://source.unsplash.com/YsiSAp3ccvk"
+          alt=""
+          class="gallery-img"
+        />
+      </div>
+    </div>
+</div>
+</div>
     <script src="./app.js"></script>
   </body>
 </html>
