added another gallery with button navigating to nav bar

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <title>lama comm</title>
   </head>
   <body>
-    <nav>
+    <nav id="nav">
       <div class="nav-top">
         <div class="nav-item">
           <img src="./img/sneakers.png" alt="" />
@@ -195,14 +195,14 @@
       </div>
 
       <div class="gallery-item">
-          <img
+        <img
           src="https://source.unsplash.com/YsiSAp3ccvk"
           alt=""
           class="gallery-img"
-          />
-          <h1 class="gallery-title">Make The World Change For You</h1>
+        />
+        <h1 class="gallery-title">Make The World Change For You</h1>
       </div>
-   
+
       <div class="gallery-item">
         <h1 class="gallery-title">Define Your Own Style</h1>
         <img
@@ -211,10 +211,33 @@
           class="gallery-img"
         />
       </div>
-  
     </div>
-</div>
-</div>
+
+    <div class="new-season">
+      <div class="ns-item">
+        <img
+          src="https://source.unsplash.com/NoVnXXmDNi0"
+          alt=""
+          class="ns-img"
+        />
+      </div>
+      <div class="ns-item">
+        <h3 class="ns-title-small">WINTER NEW ARRIVALS</h3>
+        <h1 class="ns-title">New Season</h1>
+        <h1 class="ns-title">New Collection</h1>
+        <a href="#nav">
+          <button class="ns-button">CHOOSE YOUR STYLE</button>
+        </a>
+      </div>
+      <div class="ns-item">
+        <img
+          src="https://source.unsplash.com/RlDOPY6rBa0"
+          alt=""
+          class="ns-img"
+        />
+      </div>
+    </div>
+
     <script src="./app.js"></script>
   </body>
 </html>
