--- a/index.html
+++ b/index.html
@@ -237,7 +237,41 @@
         />
       </div>
     </div>
-
+    <footer>
+      <div class="footer-left">
+        <div class="footer-menu">
+          <h1 class="footer-menu-title">About us</h1>
+          <ul class="footer-menu-list">
+            <li class="footer-list-item">Company</li>
+            <li class="footer-list-item">Contact</li>
+            <li class="footer-list-item">Careers</li>
+            <li class="footer-list-item">Affiliates</li>
+            <li class="footer-list-item">Stores</li>
+          </ul>
+        </div>
+        <div class="footer-menu">
+          <h1 class="footer-menu-title">Useful Links</h1>
+          <ul class="footer-menu-list">
+            <li class="footer-list-item">Support</li>
+            <li class="footer-list-item">Refund</li>
+            <li class="footer-list-item">FAQ</li>
+            <li class="footer-list-item">Feedback</li>
+            <li class="footer-list-item">Stories</li>
+          </ul>
+        </div>
+        <div class="footer-menu">
+          <h1 class="footer-menu-title">Products</h1>
+          <ul class="footer-menu-list">
+            <li class="footer-list-item">Air Force</li>
+            <li class="footer-list-item">Air Jordan</li>
+            <li class="footer-list-item">Blazer</li>
+            <li class="footer-list-item">Crater</li>
+            <li class="footer-list-item">Hippie</li>
+          </ul>
+        </div>
+      </div>
+      <div class="footer-right">Right</div>
+    </footer>
     <script src="./app.js"></script>
   </body>
 </html>
