--- a/index.html
+++ b/index.html
@@ -270,7 +270,29 @@
           </ul>
         </div>
       </div>
-      <div class="footer-right">Right</div>
+      <div class="footer-right">
+        <div class="footer-right-menu">
+          <h1 class="footer-menu-title">Subscribe to the newsletter</h1>
+          <div class="footer-mail">
+            <input
+              type="text"
+              placeholder="your@email.com"
+              class="footer-input"
+            />
+            <button class="footer-button">Join!</button>
+          </div>
+        </div>
+
+        <div class="footer-right-menu">
+          <h1 class="footer-menu-title">Follow us!</h1>
+          <div class="footer-icons">
+            <img src="./img/facebook.png" alt="" class="footer-icon" />
+            <img src="./img/twitter.png" alt="" class="footer-icon" />
+            <img src="./img/instagram.png" alt="" class="footer-icon" />
+            <img src="./img/whatsapp.png" alt="" class="footer-icon" />
+          </div>
+        </div>
+      </div>
     </footer>
     <script src="./app.js"></script>
   </body>
