styled the footer

--- a/index.html
+++ b/index.html
@@ -292,6 +292,9 @@
             <img src="./img/whatsapp.png" alt="" class="footer-icon" />
           </div>
         </div>
+        <div class="footer-right-menu">
+          <span class="copyright">@SkandogDev. All rights reserved. 2022</span>
+        </div>
       </div>
     </footer>
     <script src="./app.js"></script>
