added logo to head and updated page title

--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
       href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&display=swap"
       rel="stylesheet"
     />
-    <title>lama comm</title>
+    <link rel="icon" href="/img/favicon.svg" />
+    <title>SkanKommerce</title>
   </head>
   <body>
     <nav id="nav">
